uploading my code

--- a/project.ipynb
+++ b/project.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "4cf41740",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "4b93d9c8",
    "metadata": {},
    "outputs": [
@@ -244,7 +244,7 @@
        "[5 rows x 37 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "2539c328",
    "metadata": {},
    "outputs": [
@@ -311,7 +311,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "7f778e5c",
    "metadata": {},
    "outputs": [
@@ -340,7 +340,7 @@
        "(15335, 37)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "8a758bcf",
    "metadata": {},
    "outputs": [
@@ -456,7 +456,7 @@
        "[1 rows x 37 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "477e01f4",
    "metadata": {},
    "outputs": [
@@ -570,7 +570,7 @@
        "[1 rows x 37 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "id": "4d9b5975",
    "metadata": {},
    "outputs": [
@@ -683,7 +683,7 @@
        "[1 rows x 37 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "2de5bdbb",
    "metadata": {},
    "outputs": [
@@ -789,7 +789,7 @@
        "[1 rows x 37 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "5dbe1a08",
    "metadata": {},
    "outputs": [
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "3ed233e7",
    "metadata": {},
    "outputs": [
@@ -899,7 +899,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -918,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "c97757ec",
    "metadata": {},
    "outputs": [
@@ -928,7 +928,7 @@
        "(15335, 35)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -942,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "6b3adcea",
    "metadata": {},
    "outputs": [
@@ -952,7 +952,7 @@
        "(15335, 34)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -966,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "0f4df598",
    "metadata": {},
    "outputs": [
@@ -1010,7 +1010,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1042,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 35,
    "id": "327f7adb",
    "metadata": {},
    "outputs": [
@@ -1050,12 +1050,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "297351.22881355934\n"
+      "The mean of prices in Arroyomolinos is 297351.22881355934\n"
      ]
     }
    ],
    "source": [
-    "print(df[df.level5 == \"Arroyomolinos (Madrid)\"].price.mean())"
+    "\n",
+    "print(\"The mean of prices in Arroyomolinos is \" + str(df[df.level5 == \"Arroyomolinos (Madrid)\"].price.mean()))"
    ]
   },
   {
@@ -1068,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "id": "2ba51bf7",
    "metadata": {},
    "outputs": [
@@ -1094,7 +1095,7 @@
    "id": "a03d2197",
    "metadata": {},
    "source": [
-    "The prices range between 0 and 600 000, however most of the homes are between 200 000 and 400 000 "
+    "The prices range between 0 and 600 000, however the prices of most of the homes are between 200 000 and 400 000 "
    ]
   },
   {
@@ -1107,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "id": "5280d0cb",
    "metadata": {},
    "outputs": [
@@ -1121,7 +1122,7 @@
        "Name: level5, dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1141,7 +1142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "id": "68aec11c",
    "metadata": {},
    "outputs": [
@@ -1151,7 +1152,7 @@
        "<AxesSubplot:xlabel='level5'>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1182,7 +1183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "id": "8d068061",
    "metadata": {},
    "outputs": [
@@ -1227,7 +1228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "id": "1c29f78c",
    "metadata": {},
    "outputs": [
@@ -1259,7 +1260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "id": "385ad99c",
    "metadata": {},
    "outputs": [
@@ -1272,7 +1273,7 @@
        "        <AxesSubplot:title={'center':'Leganés'}>]], dtype=object)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1304,7 +1305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "id": "312aac99",
    "metadata": {},
    "outputs": [],
@@ -1322,14 +1323,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "id": "f7931ec0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cb8e86610639418f8eae76a6f7474382",
+       "model_id": "0a3e6301221e4acdb931547a86743043",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1372,7 +1373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "id": "e0ef506b",
    "metadata": {},
    "outputs": [
@@ -1390,7 +1391,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_7968/3819505947.py:1: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_1052/3819505947.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1411,6 +1412,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "01afdbc7",
+   "metadata": {},
+   "source": [
+    "The prices are very similar, however it is higher for Alcorón."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a4376b3f",
    "metadata": {},
    "source": [
@@ -1419,7 +1428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "id": "37dbaf65",
    "metadata": {},
    "outputs": [
@@ -1455,7 +1464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "id": "8231d73e",
    "metadata": {},
    "outputs": [
@@ -1485,7 +1494,7 @@
    "id": "ea69101e",
    "metadata": {},
    "source": [
-    "The average of price/m2 is higher for Galapagar"
+    "In this case the average of price/m2 is higher for Galapagar"
    ]
   },
   {
@@ -1499,7 +1508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "id": "405462e1",
    "metadata": {},
    "outputs": [
@@ -1509,7 +1518,7 @@
        "Text(0, 0.5, 'Price')"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1561,7 +1570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 31,
    "id": "e08292ff",
    "metadata": {},
    "outputs": [
@@ -1571,7 +1580,7 @@
        "Text(0, 0.5, 'Price')"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1625,6 +1634,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0acd3fce",
+   "metadata": {},
+   "source": [
+    "The plots show that there is a correlation between price and surface."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "522c6bd9",
    "metadata": {},
    "source": [
@@ -1633,7 +1650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 32,
    "id": "014ec6c8",
    "metadata": {},
    "outputs": [
@@ -1676,7 +1693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 40,
    "id": "9e8b34ba",
    "metadata": {},
    "outputs": [
@@ -1684,13 +1701,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " Madrid Capital    6237\n",
+      "The population that contains the most houses is  Madrid Capital    6237\n",
       "Name: level5, dtype: int64\n"
      ]
     }
    ],
    "source": [
-    "print(df['level5'].value_counts().head(1))"
+    "print(\"The population that contains the most houses is \" + str(df['level5'].value_counts().head(1)))"
    ]
   }
  ],
