uploading my code

--- a/project.ipynb
+++ b/project.ipynb
@@ -1415,7 +1415,7 @@
    "id": "01afdbc7",
    "metadata": {},
    "source": [
-    "The prices are very similar, however it is higher for Alcorón."
+    "The prices are very similar, however it is higher for Alcorcón."
    ]
   },
   {
@@ -1637,7 +1637,7 @@
    "id": "0acd3fce",
    "metadata": {},
    "source": [
-    "The plots show that there is a correlation between price and surface."
+    "The plots show that there could be a correlation between price and surface."
    ]
   },
   {
